2006-09-20  Josh Stone  <joshua.i.stone@intel.com>

	PR 3233
	* buildok/timestamp.stp: add gettimeofday_ns test.

2006-09-12  David Smith  <dsmith@redhat.com>

	* Added .cvsignore file.

2006-09-09  Frank Ch. Eigler  <fche@elastic.org>

	* lib/systemtap.exp (stap_run_batch): New helper routine.
	* systemtap.pass1-4/*.exp: Use it instead of catch/exec/>>& hack.

2006-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* parseok/eighteen.stp, semok/twentythree.stp: New files for
	testing initialized globals.

2006-08-21  Martin Hunt  <hunt@redhat.com>

	* lib/stap_run.exp: Check for existence of installtest_p
	before running it. This reenables running individual tests
	with runtest.
	* lib/stap_run2.exp: Ditto.
	* lib/stap_run_binary.exp: Ditto.	

2006-08-12  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (clean-local): Clean up dejagnu turds.
	* Makefile.in: Regenerated.

2006-08-12  Frank Ch. Eigler  <fche@elastic.org>

	* all: Reorganized old pass-1..4 tests one dejagnu bucket.
	Moved over old pass-5 tests, except for disabled syscalls tests.
	* Makefile (installcheck): New target for running pass-1..5
	tests against installed systemtap.